<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aktionen" 
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>
<View 
		android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/black"/>
    
	<Button
        android:id="@+id/bt_notes"
        android:text="@string/notizen"
        android:drawableLeft="@drawable/ic_action_notes" 
        style="@style/menu_button"/>
	
	<Button
	    android:id="@+id/bt_tasks"
	    style="@style/menu_button"
	    android:drawableLeft="@drawable/ic_action_tasks"
	    android:text="@string/aufgaben" />
		
	<Button
	    android:id="@+id/bt_private"
	    style="@style/menu_button"
	    android:drawableLeft="@drawable/ic_action_key"
	    android:text="@string/privat"
	    android:visibility="gone" />

</LinearLayout>